# dvc-stages-container-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  image.sha  params.yaml  pyproject.toml
.dvc/: config
src/: generate-raw-data.py  preprocess-data.py
src/dummy_data/: generate.py  preprocess.py
