[project]
name = "dummy-data"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Joshua Schraven", email = "joshua.schraven@hsu-hh.de" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
]

[project.scripts]
dummy-data = "dummy_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
